2001-05-06  Tom Tromey  <tromey@redhat.com>

	* automake.in (GNITS_VERSION_PATTERN): Document.  Added `fork
	identifier'.
	(handle_options): Handle fork identifier in version number.

	* automake.texi (Dist): Document distcheck-hook.

	* tests/confh4.test: Updated to reflect DEFS change.
	For PR automake/132.

	Fix for PR automake/132:
	* automake.in (c, c++, objc, asm, ppf77): Add DEFAULT_INCLUDES to
	compilation.
	(java): Remove INCLUDES and DEFS from compilation.
	(lang_c_finish): Add DEFAULT_INCLUDES to compilation.
	* compile.am (DEFS): Don't include %DEFAULT_INCLUDES%.
	(DEFAULT_INCLUDES): New macro.

	* automake.in (usage): Re-align explanatory text.
	Fixes PR automake/148.

	* automake.texi (Uniform): Don't use @PROGRAMS@.
	Fixes PR automake/154.

	For PR automake/160:
	* tests/Makefile.am (TESTS): Added subobj5.test and subobj6.test.
	(XFAIL_TESTS): Added subobj6.test.
	* tests/subobj6.test: New file.

	* automake.texi (Uniform): Mention dist_, nodist_, and nobase_.
	(Top level): Don't mention `flat'.
	(Extending): Likewise.
	(User Variables): New node.

	* distdir.am (distdir): Make subdirectory for each file.
	Fixes test subobj5.test.

	* tests/Makefile.am (TESTS): Added new file.
	(XFAIL_TESTS): Likewise.
	* tests/texinfo10.test: New file.

2001-05-05  Pavel Roskin <proski@gnu.org>

	* automake.in (scan_texinfo_file): Treat @defindex and @synindex
	in the same way as @defcodeindex and @syncodeindex respectively.

2001-05-05  Tom Tromey  <tromey@redhat.com>

	* mans.am (install-man%SECTION%): Minor cleanup.
	(uninstall-man%SECTION%): Likewise.

	* tests/Makefile.am (XFAIL_TESTS): Removed man.test.
	* mans.am (install-man%SECTION%): Handle dist_ and nodist_
	prefixes.
	(uninstall-man%SECTION%): Likewise.
	* automake.in (handle_man_pages): Handle dist_ and nodist_
	prefixes.

	* automake.texi (Future): Removed.
	(Depth): Removed.
	(Hello): Don't mention `deep'.
	(Top level): Likewise.

	* automake.in (conditional_true_when): Use a hash, not index().