@@ -30,4 +30,4 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE --include-deps --copy --add-missing
 ./configure
-make dist
+$MAKE dist
