@@ -41,8 +41,8 @@ mkdir build
 cd build
 
 ../configure
-make
-make distclean
+$MAKE
+$MAKE distclean
 
 test -f generic/a.o && exit 1
 test -f generic/.dirstamp && exit 1
