@@ -1,5 +1,8 @@
 2001-05-06  Tom Tromey  <tromey@redhat.com>
 
+	* tests/subobj6.test (wish_SOURCES): Use $MAKE.
+	* tests/subobj5.test (wish_SOURCES): Use $MAKE.
+
 	* automake.in (GNITS_VERSION_PATTERN): Document.  Added `fork
 	identifier'.
 	(handle_options): Handle fork identifier in version number.
